--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,1 @@
-<div>
-    <!-- This should be displayed only when the user is logged in -->
-    <h1 *ngIf="authService.user | async">
-        Welcome user: {{ (authService.user | async)?.email}}!
-    </h1>
-
-    <div *ngIf="!(authService.user | async)">
-        <input type="text" [(ngModel)]="email" placeholder="Enter email"/>
-        <input type="password" [(ngModel)]="password" placeholder="Enter password"/>
-
-        <button (click)="signup()" [disabled]="!email || !password">
-            Signup
-        </button>
-
-        <button (click)="login()" [disabled]="!email || !password">
-            Login
-        </button>
-    </div>
-
-    <button (click)="logout()" *ngIf="authService.user | async">
-        Logout
-    </button>
-    
-</div>
-
-<app-count-down></app-count-down>
+<router-outlet></router-outlet>
