Landing Page and Basic Components
Added a landing page and some basic functionality for signing in and signing up with firebase.

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,46 +1,52 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-        
-        <div class="authBlock">
-            <h3> Sign In </h3>
-            <div class="formGroup">
-                <input type="text" class="formControl" placeholder="Username" #userName required>
-            </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <div class="displayTable border bg-light">
+                <div class="displayTableCell">
+                    
+                    <div class="authBlock">
+                        <h3> Sign In </h3>
+                        <div class="formGroup">
+                            <input type="text" class="formControl" placeholder="Username" #userName required>
+                        </div>
 
-            <div class="formGroup">
-                <input type="password" class="formControl" placeholder="Password" #userPassword required>
-            </div>
+                        <div class="formGroup">
+                            <input type="password" class="formControl" placeholder="Password" #userPassword required>
+                        </div>
 
-            <div class="formGroup">
-                <input type="button" class="btn btnPrimary" value="Log In" (click)="authService.signIn(userName.value, userPassword.value)">
-            </div>
+                        <div class="formGroup">
+                            <input type="button" class="btn btnPrimary" value="Log In" (click)="authService.signIn(userName.value, userPassword.value)">
+                        </div>
 
-            <div class="formGroup">
-                <span class="or">
-                    <span class="orInner">
-                        Or
-                    </span>
-                </span>
-            </div>
+                        <div class="formGroup">
+                            <span class="or">
+                                <span class="orInner">
+                                    Or
+                                </span>
+                            </span>
+                        </div>
 
-            <!-- Button for Google Authentication-->
-            <div class="formGroup">
-                <button type="button" class="btn googleBtn" (click)="authService.googleAuth()">
-                    <i class="fab fa-google-plus-g"></i>
-                    Log in with Google
-                </button>
-            </div>
+                        <!-- Button for Google Authentication-->
+                        <div class="formGroup">
+                            <button type="button" class="btn btn-primary googleBtn" (click)="authService.googleAuth()">
+                                <i class="fab fa-google-plus-g"></i>
+                                Log in with Google
+                            </button>
+                        </div>
 
-            <div class="forgotPassword">
-                <span routerLink="/forgot-password">
-                    Forgot Password?
-                </span>
+                        <div class="forgotPassword">
+                            <span routerLink="/forgot-password">
+                                Forgot Password?
+                            </span>
+                        </div>
+                    </div>
+
+                        <div class="redirectToLogin">
+                            <span>Don't have an account?<span class="redirect" routerLink="/register-user">Sign Up</span></span>
+                        </div>
+                    
+                </div>
             </div>
         </div>
-
-            <div class="redirectToLogin">
-                <span>Don't have an account?<span class="redirect" routerLink="/register-user">Sign Up</span></span>
-            </div>
-        
     </div>
 </div>
